--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,14 @@ apply plugin: "kotlin-kapt"
 
 apply plugin: 'androidx.navigation.safeargs'
 
+
+android {
+    compileSdkVersion 32
+    defaultConfig{
+        minSdkVersion 21
+    }
+}
+
 dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
@@ -60,21 +68,21 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     // Kotlin Android Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
 
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-extensions:2.5.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.5.0"
+//    implementation "androidx.lifecycle:lifecycle-extensions:2.5.0"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
+//    kapt "androidx.lifecycle:lifecycle-compiler:2.5.0"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     // Groupie RecyclerView
-    implementation 'com.xwray:groupie:2.1.0'
-    implementation 'com.xwray:groupie-kotlin-android-extensions:2.1.0'
+//    implementation 'com.xwray:groupie:2.1.0'
+//    implementation 'com.xwray:groupie-kotlin-android-extensions:2.1.0'
 
     // Preference
     implementation "androidx.preference:preference-ktx:1.2.0"
@@ -88,9 +96,9 @@ dependencies {
     // Kodein
     implementation 'org.kodein.di:kodein-di-generic-jvm:6.3.3'
     implementation 'org.kodein.di:kodein-di-framework-android-x:6.3.3'
-    implementation 'org.kodein.di:kodein-di:7.12.0'
-    implementation("org.kodein.di:kodein-di-jvm:7.12.0")
-    implementation "org.kodein.di:kodein-di-framework-android-x:7.12.0"
+//    implementation 'org.kodein.di:kodein-di:7.12.0'
+//    implementation("org.kodein.di:kodein-di-jvm:7.12.0")]
+//    implementation "org.kodein.di:kodein-di-framework-android-x:7.12.0"
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.4.0'
 
@@ -98,11 +106,4 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-}
-
-android {
-    compileSdkVersion 27
-    defaultConfig{
-        minSdkVersion 16
-    }
 }
